--- a/TasarYeriProject.PresantationLayer/Areas/Admin/Views/AdminRol/Index.cshtml
+++ b/TasarYeriProject.PresantationLayer/Areas/Admin/Views/AdminRol/Index.cshtml
@@ -56,63 +56,63 @@
     </div>
 
     <!-- Mainly scripts -->
-    <script src="/AdminTema/js/jquery-3.1.1.min.js"></script>
-    <script src="/AdminTema/js/popper.min.js"></script>
-    <script src="/AdminTema/js/bootstrap.js"></script>
-    <script src="/AdminTema/js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="/AdminTema/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/admin2/js/jquery-3.1.1.min.js"></script>
+    <script src="/admin2/js/popper.min.js"></script>
+    <script src="/admin2/js/bootstrap.js"></script>
+    <script src="/admin2/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="/admin2/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
 
 
     <!-- Flot -->
-    <script src="/AdminTema/js/plugins/flot/jquery.flot.js"></script>
-    <script src="/AdminTema/js/plugins/flot/jquery.flot.tooltip.min.js"></script>
-    <script src="/AdminTema/js/plugins/flot/jquery.flot.spline.js"></script>
-    <script src="/AdminTema/js/plugins/flot/jquery.flot.resize.js"></script>
-    <script src="/AdminTema/js/plugins/flot/jquery.flot.pie.js"></script>
-    <script src="/AdminTema/js/plugins/flot/jquery.flot.symbol.js"></script>
-    <script src="/AdminTema/js/plugins/flot/curvedLines.js"></script>
+    <script src="/admin2/js/plugins/flot/jquery.flot.js"></script>
+    <script src="/admin2/js/plugins/flot/jquery.flot.tooltip.min.js"></script>
+    <script src="/admin2/js/plugins/flot/jquery.flot.spline.js"></script>
+    <script src="/admin2/js/plugins/flot/jquery.flot.resize.js"></script>
+    <script src="/admin2/js/plugins/flot/jquery.flot.pie.js"></script>
+    <script src="/admin2/js/plugins/flot/jquery.flot.symbol.js"></script>
+    <script src="/admin2/js/plugins/flot/curvedLines.js"></script>
 
     <!-- Peity -->
-    <script src="/AdminTema/js/plugins/peity/jquery.peity.min.js"></script>
-    <script src="/AdminTema/js/demo/peity-demo.js"></script>
+    <script src="/admin2/js/plugins/peity/jquery.peity.min.js"></script>
+    <script src="/admin2/js/demo/peity-demo.js"></script>
 
     <!-- Custom and plugin javascript -->
-    <script src="/AdminTema/js/inspinia.js"></script>
-    <script src="/AdminTema/js/plugins/pace/pace.min.js"></script>
+    <script src="/admin2/js/inspinia.js"></script>
+    <script src="/admin2/js/plugins/pace/pace.min.js"></script>
 
     <!-- jQuery UI -->
-    <script src="/AdminTema/js/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script src="/admin2/js/plugins/jquery-ui/jquery-ui.min.js"></script>
 
     <!-- Jvectormap -->
-    <script src="/AdminTema/js/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
-    <script src="/AdminTema/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+    <script src="/admin2/js/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
+    <script src="/admin2/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
 
     <!-- Sparkline -->
-    <script src="/AdminTema/js/plugins/sparkline/jquery.sparkline.min.js"></script>
+    <script src="/admin2/js/plugins/sparkline/jquery.sparkline.min.js"></script>
 
     <!-- Sparkline demo data  -->
-    <script src="/AdminTema/js/demo/sparkline-demo.js"></script>
+    <script src="/admin2/js/demo/sparkline-demo.js"></script>
 
     <!-- ChartJS-->
-    <script src="/AdminTema/js/plugins/chartJs/Chart.min.js"></script>
+    <script src="/admin2/js/plugins/chartJs/Chart.min.js"></script>
 
     <!-- Custom and plugin javascript -->
-    <script src="AdminTema/js/inspinia.js"></script>
-    <script src="AdminTema/js/plugins/pace/pace.min.js"></script>
+    <script src="admin2/js/inspinia.js"></script>
+    <script src="admin2/js/plugins/pace/pace.min.js"></script>
 
     <!-- iCheck -->
-    <script src="AdminTema/js/plugins/iCheck/icheck.min.js"></script>
+    <script src="admin2/js/plugins/iCheck/icheck.min.js"></script>
 
 
     <!-- SUMMERNOTE -->
-    <script src="/AdminTema/js/plugins/summernote/summernote-bs4.js"></script>
+    <script src="/admin2/js/plugins/summernote/summernote-bs4.js"></script>
 
     <!-- Data picker -->
-    <script src="/AdminTema/js/plugins/datapicker/bootstrap-datepicker.js"></script>
+    <script src="/admin2/js/plugins/datapicker/bootstrap-datepicker.js"></script>
 
     <!-- slick carousel-->
-    <script src="/AdminTema/js/plugins/slick/slick.min.js"></script>
+    <script src="/admin2/js/plugins/slick/slick.min.js"></script>
 
 
 
