--- a/TasarYeriProject.PresantationLayer/Areas/Admin/Views/Contact/Index.cshtml
+++ b/TasarYeriProject.PresantationLayer/Areas/Admin/Views/Contact/Index.cshtml
@@ -63,15 +63,15 @@
 
 
     <!-- Mainly scripts -->
-    <script src="/AdminTema/js/jquery-3.1.1.min.js"></script>
-    <script src="/AdminTema/js/popper.min.js"></script>
-    <script src="/AdminTema/js/bootstrap.js"></script>
-    <script src="/AdminTema/js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="/AdminTema/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/admin2/js/jquery-3.1.1.min.js"></script>
+    <script src="/admin2/js/popper.min.js"></script>
+    <script src="/admin2/js/bootstrap.js"></script>
+    <script src="/admin2/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="/admin2/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
     <!-- Custom and plugin javascript -->
-    <script src="/AdminTema/js/inspinia.js"></script>
-    <script src="/AdminTema/js/plugins/pace/pace.min.js"></script>
+    <script src="/admin2/js/inspinia.js"></script>
+    <script src="/admin2/js/plugins/pace/pace.min.js"></script>
 
 
 </body>
