--- a/TasarYeriProject.PresantationLayer/Views/Shared/SellerDashboardPartials/_HeadPartial.cshtml
+++ b/TasarYeriProject.PresantationLayer/Views/Shared/SellerDashboardPartials/_HeadPartial.cshtml
@@ -5,25 +5,25 @@
 
     <title>TASAR YERİ | Satıcı Dashboard</title>
 
-    <link href="/Satici_dashboard/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/Satici_dashboard/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="/AdminTema/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/AdminTema/font-awesome/css/font-awesome.css" rel="stylesheet">
 
 
-    <link href="/Satici_dashboard/css/plugins/summernote/summernote-bs4.css" rel="stylesheet">
+    <link href="/admin2/css/plugins/summernote/summernote-bs4.css" rel="stylesheet">
 
-    <link href="/Satici_dashboard/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
+    <link href="/admin2/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
     <!-- Favicon -->
-    <link href="/Satici_dashboard/img/logosvg.png" rel="shortcut icon" />
+    <link href="/AdminTema/img/logosvg.png" rel="shortcut icon" />
 
-    <link href="/Satici_dashboard/css/plugins/toastr/toastr.min.css" rel="stylesheet">
+    <link href="/AdminTema/css/plugins/toastr/toastr.min.css" rel="stylesheet">
 
     <!-- Morris -->
-    <link href="/Satici_dashboard/css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
+    <link href="/admin2/css/plugins/morris/morris-0.4.3.min.css" rel="stylesheet">
 
-    <link href="/Satici_dashboard/css/animate.css" rel="stylesheet">
-    <link href="/Satici_dashboard/css/style.css" rel="stylesheet">
+    <link href="/AdminTema/css/animate.css" rel="stylesheet">
+    <link href="/AdminTema/css/style.css" rel="stylesheet">
 
-    <link href="/Satici_dashboard/css/plugins/slick/slick.css" rel="stylesheet">
-    <link href="/Satici_dashboard/css/plugins/slick/slick-theme.css" rel="stylesheet">
+    <link href="/admin2/css/plugins/slick/slick.css" rel="stylesheet">
+    <link href="/admin2/css/plugins/slick/slick-theme.css" rel="stylesheet">
 
 </head>
