--- a/TasarYeriProject.PresantationLayer/Views/Message/Inbox.cshtml
+++ b/TasarYeriProject.PresantationLayer/Views/Message/Inbox.cshtml
@@ -151,43 +151,43 @@
     </div>
 </div>
 <!-- Mainly scripts -->
-<script src="/Satici_dashboard/js/jquery-3.1.1.min.js"></script>
-<script src="/Satici_dashboard/js/popper.min.js"></script>
-<script src="/Satici_dashboard/js/bootstrap.js"></script>
-<script src="/Satici_dashboard/js/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script src="/Satici_dashboard/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="/admin2/js/jquery-3.1.1.min.js"></script>
+<script src="/admin2/js/popper.min.js"></script>
+<script src="/admin2/js/bootstrap.js"></script>
+<script src="/admin2/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="/admin2/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
 <!-- Flot -->
-<script src="/Satici_dashboard/js/plugins/flot/jquery.flot.js"></script>
-<script src="/Satici_dashboard/js/plugins/flot/jquery.flot.tooltip.min.js"></script>
-<script src="/Satici_dashboard/js/plugins/flot/jquery.flot.spline.js"></script>
-<script src="/Satici_dashboard/js/plugins/flot/jquery.flot.resize.js"></script>
-<script src="/Satici_dashboard/js/plugins/flot/jquery.flot.pie.js"></script>
-<script src="/Satici_dashboard/js/plugins/flot/jquery.flot.symbol.js"></script>
-<script src="/Satici_dashboard/js/plugins/flot/curvedLines.js"></script>
+<script src="/admin2/js/plugins/flot/jquery.flot.js"></script>
+<script src="/admin2/js/plugins/flot/jquery.flot.tooltip.min.js"></script>
+<script src="/admin2/js/plugins/flot/jquery.flot.spline.js"></script>
+<script src="/admin2/js/plugins/flot/jquery.flot.resize.js"></script>
+<script src="/admin2/js/plugins/flot/jquery.flot.pie.js"></script>
+<script src="/admin2/js/plugins/flot/jquery.flot.symbol.js"></script>
+<script src="/admin2/js/plugins/flot/curvedLines.js"></script>
 
 <!-- Peity -->
-<script src="/Satici_dashboard/js/plugins/peity/jquery.peity.min.js"></script>
-<script src="/Satici_dashboard/js/demo/peity-demo.js"></script>
+<script src="/admin2/js/plugins/peity/jquery.peity.min.js"></script>
+<script src="/admin2/js/demo/peity-demo.js"></script>
 
 <!-- Custom and plugin javascript -->
-<script src="/Satici_dashboard/js/inspinia.js"></script>
-<script src="/Satici_dashboard/js/plugins/pace/pace.min.js"></script>
+<script src="/admin2/js/inspinia.js"></script>
+<script src="/admin2/js/plugins/pace/pace.min.js"></script>
 
 <!-- jQuery UI -->
-<script src="/Satici_dashboard/js/plugins/jquery-ui/jquery-ui.min.js"></script>
+<script src="/admin2/js/plugins/jquery-ui/jquery-ui.min.js"></script>
 
 <!-- Jvectormap -->
-<script src="/Satici_dashboard/js/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
-<script src="/Satici_dashboard/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+<script src="/admin2/js/plugins/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
+<script src="/admin2/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
 
 <!-- Sparkline -->
-<script src="/Satici_dashboard/js/plugins/sparkline/jquery.sparkline.min.js"></script>
+<script src="/admin2/js/plugins/sparkline/jquery.sparkline.min.js"></script>
 
 <!-- Sparkline demo data  -->
-<script src="/Satici_dashboard/js/demo/sparkline-demo.js"></script>
+<script src="/admin2/js/demo/sparkline-demo.js"></script>
 
 <!-- ChartJS-->
-<script src="/Satici_dashboard/js/plugins/chartJs/Chart.min.js"></script>
+<script src="/admin2/js/plugins/chartJs/Chart.min.js"></script>
 </body>
 </html> *@
