--- a/TasarYeriProject.PresantationLayer/Views/Product/SellerDashboardProductList.cshtml
+++ b/TasarYeriProject.PresantationLayer/Views/Product/SellerDashboardProductList.cshtml
@@ -109,14 +109,14 @@
     </div>
 
   
-    <script src="/Satici_dashboard/js/jquery-3.1.1.min.js"></script>
-    <script src="/Satici_dashboard/js/popper.min.js"></script>
-    <script src="/Satici_dashboard/js/bootstrap.js"></script>
-    <script src="/Satici_dashboard/js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="/Satici_dashboard/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="/admin2/js/jquery-3.1.1.min.js"></script>
+    <script src="/admin2/js/popper.min.js"></script>
+    <script src="/admin2/js/bootstrap.js"></script>
+    <script src="/admin2/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="/admin2/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 
     <!-- Custom and plugin javascript -->
-    <script src="/Satici_dashboard/js/inspinia.js"></script>
-    <script src="/Satici_dashboard/js/plugins/pace/pace.min.js"></script>
+    <script src="/admin2/js/inspinia.js"></script>
+    <script src="/admin2/js/plugins/pace/pace.min.js"></script>
 </body>
 </html>
